libx11 (2:1.3.2-2) UNRELEASED; urgency=low

  * xtrans has been fixed to not make us export a weak in6addr_any.  Adjust
    libx11-6.symbols accordingly.

 -- Julien Cristau <jcristau@debian.org>  Mon, 07 Dec 2009 15:17:13 +0100

libx11 (2:1.3.2-1) unstable; urgency=low

  [ Julien Cristau ]
  * libx11-6.symbols: _XkbReadBufferCopy32, _XkbReadCopyData32 and
    _XkbWriteCopyData32 are only present on 64-bit architectures.
  * Unmark the following symbols as private, they're being used:
    - _XRegisterFilterByMask
    - _XRegisterFilterByType
    - _XUnregisterFilter
    - _XInitKeysymDB
    - _Xevent_to_mask
  * Build the Xlib specs and install them in libx11-dev.
  * Upload to unstable.

  [ Timo Aaltonen ]
  * New upstream release.
  * Bump the build-dep on xutils-dev (>= 1:7.5~1).

 -- Julien Cristau <jcristau@debian.org>  Mon, 23 Nov 2009 20:50:03 +0100

libx11 (2:1.3-1) experimental; urgency=low

  * libx11-6.symbols: mark some more stuff as private.
  * libx11-6.symbols: add kfreebsd-amd64 tag for 64-bit symbols.
  * Run dpkg-gensymbols with -c4 to catch mismatches between the symbols file
    and the library.
  * New upstream release.
  * Cherry-pick patch from upstream git to avoid an error in configure due to
    underquoting.
  * Fix 006_tailor_pt_BR.UTF-8_Compose.diff to apply on new upstream.
  * Bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Mon, 12 Oct 2009 15:28:23 +0200

libx11 (2:1.2.99.901-1) experimental; urgency=low

  [ Brice Goglin ]
  * Bump Standards-Version to 3.8.2.

  [ Julien Cristau ]
  * Drop 002_arm_abi_brain_damage.diff, the old ABI arm port is gone.
  * Use a glob in libx11-6.install and libx11-xcb1.install.
  * Add tentative symbols file for libX11.so.6.  Many private symbols still
    included.
  * Build-depend on dpkg 1.15.3, to get support for tags in the symbols file.
  * New upstream release candidate
    + add {left,right}wards arrow to en_US.UTF-8 compose table