@@ -2,6 +2,8 @@ libx11 (2:1.3.2-2) UNRELEASED; urgency=low
 
   * xtrans has been fixed to not make us export a weak in6addr_any.  Adjust
     libx11-6.symbols accordingly.
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 07 Dec 2009 15:17:13 +0100
 
